--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
     <!-- Chart container -->
     <div id="chart-container">
-      <canvas id="cryptoChart"></canvas>
+<canvas id="chart"></canvas>as>
     </div>
     <!-- Python console -->
     <div id="console">
