Update index.htmlFix stray characters after canvas closing tag

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h2 class="text-lg font-semibold mb-2">Consola Python</h2>
       <textarea id="pythonInput" placeholder="Escribe código Python aquí..."></textarea>
       <button id="runPythonButton" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded mb-2">Ejecutar</button>
-      <pre id="pythonOutput"></pre>
+      <pre id="pythutput"></pre>
     </div>
   </main>
 
