Update iRemove stray characters after canvas tagndex.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
     <!-- Chart container -->
     <div id="chart-container">
-<canvas id="chart"></canvas>as>
+<canvas id="chart"></canvass>
     </div>
     <!-- Python console -->
     <div id="console">
